--- a/templates/base.html
+++ b/templates/base.html
@@ -7,23 +7,30 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="{% static 'content.css' %}">
+    <link rel="stylesheet" href="{% static 'css/content.css' %}">
+    <link rel="stylesheet" href="{% static 'css/upload.css' %}">
+    <script type="text/javascript" src="{% static 'manage/jquery/dist/jquery.min.js' %}"></script>
+    <script type="text/javascript" src="{% static 'manage/jquery/src/ajax.js' %}"></script>
+    <script type="text/javascript" src="{% static 'manage/jquery.iframe-transport/jquery.iframe-transport.js' %}"></script>
+    <script type="text/javascript" src="{% static 'manage/jquery.ui.widget/jquery.ui.widget.js' %}"></script>
+    <script type="text/javascript" src="{% static 'manage/blueimp-file-upload/js/jquery.fileupload.js' %}"></script>
+    <script type="text/javascript" src="{% static 'manage/jquery-knob/js/jquery.knob.js' %}"></script>
+    <script type="text/javascript" src="{% static 'js/upload.js' %}"></script>
     <title>{% block title %}{% endblock %}</title>
 </head>
 <body>
 <nav class="nav_panel">
-    <div style="display: flex; flex-direction: row;margin-left: 200px; width: 60%;box-sizing: border-box;">
-        <a href="{% url "index" %}" class="nav_item">Home</a>
-        <a href="{% url "about" %}" class="nav_item">About</a>
-        <a href="{% url "contacts" %}" class="nav_item">Contacts</a>
+    <div style="display: flex; flex-direction: row;margin-left: 20%; width: 60%;box-sizing: border-box;">
+        <a href="{% url "index" %}" class="nav_item">Главная страница</a>
+        <a href="{% url "decryptor_index" %}" class="nav_item">Сканер бланков</a>
     </div>
     <div class="nav_auth_item">
-        <!-- If user is authenticated we see him full name in navigation panel -->
+        <!-- If user is authenticated we see him full name and link to logout in navigation panel -->
         {% if request.user.is_authenticated %}
             <!-- We need to create profile settings page -->
-            <a class="nav_item">{% if request.user.get_full_name %}{{ request.user.get_full_name }}{% else %}{{ request.user.username }}{% endif %}</a>
+            <a href="{% if request.user.is_superuser %}/admin{% else %}{% endif %}" class="nav_item">{% if request.user.get_full_name %}{{ request.user.get_full_name }}{% else %}{{ request.user.username }}{% endif %}</a>
             <a href="{% url 'logout' %}"  class="nav_item">Logout</a>
-        <!-- Else we see sentence to register and to login -->
+        <!-- Else we see link to register and to login -->
         {% else %}
             <a href="{% url 'register' %}" class="nav_item">Register</a>
             <a href="{% url 'login' %}" class="nav_item">Login</a>
@@ -37,10 +44,10 @@
 
         {% endblock %}
         <footer class="footer">
-            <div class="footer_item">&copy; Hakaton Team - <a href="{% url "about" %}">About</a> </div>
-            <a href="{% url "index" %}" class="footer_item">Home</a>
-            <a href="{% url "contacts" %}" class="footer_item">Contacts</a>
-            <a class="footer_item" href="https://github.com/Artemka007/FormDecryption">Project on GitHub</a>
+            <div class="footer_item">&copy; Hakaton Team - <a href="{% url "about" %}">Описание проекта</a> </div>
+            <a href="{% url "index" %}" class="footer_item">Главная страница</a>
+            <a href="{% url "contacts" %}" class="footer_item">Контакты</a>
+            <a class="footer_item" href="https://github.com/Artemka007/FormDecryption">Проект на GitHub</a>
         </footer>
     </div>
 </div>
