--- a/mainApp/static/css/content.css
+++ b/mainApp/static/css/content.css
@@ -18,8 +18,8 @@ html, body{
     border-bottom: rgb(222, 222, 222) solid 3px;
     height: fit-content;
     width: 100%;
-    padding: 10px 20px;
-    background-color: rgba(0,0,0,0.8);
+    padding: 0 20px;
+    background-color: rgb(58, 70, 131);
     box-sizing: border-box;
 }
 
@@ -28,10 +28,15 @@ html, body{
     width: fit-content;
     height: fit-content;
     color: #fff;
-    padding: 5px 20px;
+    padding: 15px 20px;
     font-size: 18px;
     cursor: pointer;
     text-decoration: none;
+    transition: background-color .2s;
+}
+
+.nav_panel .nav_item:hover{
+    background-color: rgba(0, 0, 0, 0.2);
 }
 
 .nav_panel .nav_auth_item{
@@ -39,13 +44,9 @@ html, body{
     flex-direction: row;
     justify-content: flex-end;
     width: 40%;
-    margin-right: 200px;
+    margin-right: 20%;
     box-sizing: border-box;
 
-}
-
-.nav_panel .nav_item:hover{
-    color: #c3c3c3;
 }
 
 .footer{
