--- a/templates/formDecryption/index.html
+++ b/templates/formDecryption/index.html
@@ -1,5 +1,8 @@
 {% extends 'base.html' %}
-{% block title %}Contacts{% endblock %}
+{% block title %}
+Upload and decrypt form
+{% endblock %}
+
 {% block content %}
 
 {% endblock %}
