--- a/templates/base.html
+++ b/templates/base.html
@@ -9,6 +9,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="{% static 'css/content.css' %}">
     <link rel="stylesheet" href="{% static 'css/upload.css' %}">
+    <link rel="stylesheet" href="{% static 'css/special_classes.css' %}">
     <script type="text/javascript" src="{% static 'manage/jquery/dist/jquery.min.js' %}"></script>
     <script type="text/javascript" src="{% static 'manage/jquery/src/ajax.js' %}"></script>
     <script type="text/javascript" src="{% static 'manage/jquery.iframe-transport/jquery.iframe-transport.js' %}"></script>
