--- a/templates/formDecryption/index.html
+++ b/templates/formDecryption/index.html
@@ -4,5 +4,28 @@ Upload and decrypt form
 {% endblock %}
 
 {% block content %}
+<div class="help_upload_text"></div>
+<div class="upload_form">
 
+    <form data-action="upload_photos" action="{% url 'decryptor_blank_upload' %}" id="upload" method="get" enctype="multipart/form-data">
+        <div style="width: 95%;">
+            {% csrf_token %}
+            <div id="drop">
+                <a>Загрузить</a>
+                <!-- Пока загружаем только форматы .jpg и .jpeg, при загрузке .jpg преобразовывается в .jpeg -->
+                <input id="files_uploader" type="file" name="upl" accept="image/jpeg,image/jpg" />
+
+            </div>
+            <!-- Сюда через jquery добавляются загруженные файлы -->
+            <div class="container dir_row" style="justify-content: center">
+                <ul class="progress_ul" style="margin-top: 30px;">
+                </ul>
+            </div>
+        </div>
+    </form>
+</div>
+<div class="container dir_row" style="justify-content: flex-end; width: 92%">
+    <button class="bt bt_default">Готово</button>
+    <button class="bt bt_default_reverse">Отмена</button>
+</div>
 {% endblock %}
