With some styles

--- a/templates/registration/password_reset_done.html
+++ b/templates/registration/password_reset_done.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %}
-{% block title %}LogIn{% endblock %}
+{% block title %}Сброс пароля{% endblock %}
 {% block content %}
-    <div>Your password is change</div>
+    <div>На Вашу почту выслана ссылка для сброса пароля.</div>
 {% endblock %}
