--- a/formDecryption/static/css/upload.css
+++ b/formDecryption/static/css/upload.css
@@ -71,18 +71,14 @@
 }
 
 .spinner {
-    display: none;
     animation: rotate 2s linear infinite;
-    z-index: 2;
-    width: 50px;
-    height: 50px;
-    position: absolute;
-    top: 50%;
-    left: 50%;
+    width: 18px;
+    height: 18px;
+    margin-right: 10px;
 }
+
 .spinner circle {
-    z-index: 2;
-    stroke: rgb(14, 207, 0);
+    stroke: rgb(201, 210, 255);
     animation: dash 1.5s ease-in-out infinite;
     stroke-linecap: round;
 }
