--- a/mainApp/static/css/content.css
+++ b/mainApp/static/css/content.css
@@ -11,6 +11,14 @@ html, body{
     width: 100%;
 }
 
+.blackout_container{
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0,0,0,0);
+    z-index: -9;
+}
+
 .nav_panel{
     display: flex;
     flex-direction: row;
@@ -24,7 +32,7 @@ html, body{
 }
 
 
-.nav_panel .nav_item{
+.nav_panel .nav_item, .nav_panel .nav_item_active{
     width: fit-content;
     height: fit-content;
     color: #fff;
@@ -35,7 +43,7 @@ html, body{
     transition: background-color .2s;
 }
 
-.nav_panel .nav_item:hover{
+.nav_panel .nav_item:hover, .nav_panel .nav_item_active{
     background-color: rgba(0, 0, 0, 0.2);
 }
 
@@ -63,3 +71,4 @@ html, body{
 .footer_item{
     margin: 5px 20px;
 }
+
