--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -1,10 +1,20 @@
 {% extends 'base.html' %}
-{% block title %}LogIn{% endblock %}
+{% block title %}Вход{% endblock %}
 {% block content %}
-    <form method="POST">
+    <div class="container dir_row" style="width: 100%; justify-content: center">
+    <div class="container">
+    <form data-action="login_form" method="POST" class="form">
+    <div class="form_title">Вход</div>
     {% csrf_token %}
-    {{ form.as_p }}
-    <button type="submit">LogIn</button>
+        <div class="container dir_row" style="width: 100%; justify-content: center;">
+            <div class="container" style="width: 100%;">
+                <input class="inp inp_default" placeholder="Логин..." type="text" name="username" autofocus="" autocapitalize="none" autocomplete="username" maxlength="150" required="" id="id_username">
+                <input class="inp inp_default" placeholder="Пароль..." type="password" name="password" autocomplete="current-password" required="" id="id_password">
+                <button data-action="login_button" type="submit" class="bt bt_default" style="font-size: 19px; width: fit-content;">Войти</button>
+            </div>
+        </div>
     </form>
     <a href="{% url 'reset_password' %}">Forgot password</a>
+    </div>
+    </div>
 {% endblock %}
