--- a/templates/registration/password_reset_form.html
+++ b/templates/registration/password_reset_form.html
@@ -1,9 +1,18 @@
 {% extends 'base.html' %}
-{% block title %}LogIn{% endblock %}
+{% block title %}Сброс пароля{% endblock %}
 {% block content %}
-    <form method="POST">
+    <div class="container dir_row" style="width: 100%; justify-content: center">
+    <div class="container">
+    <form method="POST" class="form">
+    <div class="form_title">Сброс пароля</div>
     {% csrf_token %}
-    {{ form.as_p }}
-    <button type="submit">LogIn</button>
-    </form>
+        <div class="container dir_row" style="width: 100%; justify-content: center;">
+            <div class="container" style="width: 100%;">
+                <input placeholder="Введите Ваш email-адрес" class="inp inp_default" type="email" name="email" autocomplete="email" maxlength="254" required="" id="id_email">
+                <button type="submit" class="bt bt_default" style="font-size: 19px;">Сбросить</button>
+            </div>
+        </div>
+    </form>\
+    </div>
+    </div>
 {% endblock %}
