--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -3,18 +3,22 @@
 {% block content %}
     <div class="container dir_row" style="width: 100%; justify-content: center">
     <div class="container">
-    <form data-action="login_form" method="POST" class="form">
-    <div class="form_title">Вход</div>
-    {% csrf_token %}
-        <div class="container dir_row" style="width: 100%; justify-content: center;">
-            <div class="container" style="width: 100%;">
-                <input class="inp inp_default" placeholder="Логин..." type="text" name="username" autofocus="" autocapitalize="none" autocomplete="username" maxlength="150" required="" id="id_username">
-                <input class="inp inp_default" placeholder="Пароль..." type="password" name="password" autocomplete="current-password" required="" id="id_password">
-                <button data-action="login_button" type="submit" class="bt bt_default" style="font-size: 19px; width: fit-content;">Войти</button>
+        <form data-action="login_form" method="POST" class="form">
+        <div class="form_title">Вход</div>
+        {% csrf_token %}
+            <div class="container dir_row" style="width: 100%; justify-content: center;">
+                <div class="container" style="width: 100%;">
+                    <div class="inp_container">
+                        <input class="inp inp_default" placeholder="Логин..." type="text" name="username" autofocus="" autocapitalize="none" autocomplete="username" maxlength="150" required="" id="id_username">
+                        <input class="inp inp_default" placeholder="Пароль..." type="password" name="password" autocomplete="current-password" required="" id="id_password">
+                    </div>
+                    <button data-action="login_button" type="submit" class="bt bt_default" style="font-size: 19px; width: fit-content; margin-left: 0; margin-right: 0;">Войти</button>
+                </div>
             </div>
+        </form>
+        <div class="links_container">
+            <a class="form_link" href="{% url 'reset_password' %}">Forgot password</a>
         </div>
-    </form>
-    <a href="{% url 'reset_password' %}">Forgot password</a>
     </div>
     </div>
 {% endblock %}
