--- a/templates/registration/password_reset_confirm.html
+++ b/templates/registration/password_reset_confirm.html
@@ -1,9 +1,21 @@
 {% extends 'base.html' %}
 {% block title %}LogIn{% endblock %}
 {% block content %}
-    <form method="POST">
+    <div class="container dir_row" style="width: 100%; justify-content: center">
+    <div class="container">
+    <form data-action="login_form" method="POST" class="form">
+    <div class="form_title">Сброс пароля</div>
     {% csrf_token %}
-    {{ form.as_p }}
-    <button type="submit">LogIn</button>
+        <div class="container dir_row" style="width: 100%; justify-content: center;">
+            <div class="container" style="width: 100%;">
+                <div class="inp_container">
+                    <input placeholder="Новый пароль..." class="inp inp_default" type="password" name="new_password1" autocomplete="new-password" required="" id="id_new_password1">
+                    <input placeholder="Подтверждение нового пароля..." class="inp inp_default" type="password" name="new_password2" autocomplete="new-password" required="" id="id_new_password2">
+                </div>
+                <button data-action="login_button" type="submit" class="bt bt_default" style="font-size: 19px; width: fit-content;">Сбросить</button>
+            </div>
+        </div>
     </form>
+    </div>
+    </div>
 {% endblock %}
