--- a/mainApp/static/css/content.css
+++ b/mainApp/static/css/content.css
@@ -33,6 +33,7 @@ html, body{
 
 
 .nav_panel .nav_item, .nav_panel .nav_item_active{
+    box-sizing: border-box;
     width: fit-content;
     height: fit-content;
     color: #fff;
@@ -54,7 +55,54 @@ html, body{
     width: 40%;
     margin-right: 20%;
     box-sizing: border-box;
+}
+.nav_panel .nav_main_item{
+    display: flex;
+    flex-direction: row;
+    margin-left: 20%;
+    width: 60%;
+    box-sizing: border-box;
+}
+@media (max-width: 1100px) {
+    .nav_panel .nav_auth_item{
+        margin-right: 5%;
+    }
+    .nav_panel .nav_main_item{
+        margin-left: 5%;
+    }
+}
+@media (max-width: 850px) {
+    .nav_panel .nav_auth_item{
+        margin-right: 0%;
+    }
+    .nav_panel .nav_main_item{
+        margin-left: 0%;
+    }
+}
+@media (max-width: 650px) {
+    .nav_panel{
+        flex-direction: column;
+        padding: 0;
+    }
 
+    .nav_panel .nav_auth_item{
+        margin-right: 0%;
+        flex-direction: column;
+        width: 100%;
+        text-align: center;
+    }
+
+    .nav_panel .nav_main_item{
+        margin-left: 0%;
+        flex-direction: column;
+        width: 100%;
+        text-align: center;
+    }
+    .nav_panel .nav_item, .nav_panel .nav_item_active{
+        margin-left: 0%;
+        width: 100%;
+        text-align: center;
+    }
 }
 
 .footer{
