--- a/templates/base.html
+++ b/templates/base.html
@@ -11,7 +11,6 @@
     <link rel="stylesheet" href="{% static 'css/upload.css' %}">
     <link rel="stylesheet" href="{% static 'css/special_classes.css' %}">
     <link rel="stylesheet" href="{% static 'css/form.css' %}">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <script type="text/javascript" src="{% static 'manage/jquery/dist/jquery.min.js' %}"></script>
     <script type="text/javascript" src="{% static 'manage/jquery/src/ajax.js' %}"></script>
     <script type="text/javascript" src="{% static 'manage/jquery.iframe-transport/jquery.iframe-transport.js' %}"></script>
@@ -19,13 +18,13 @@
     <script type="text/javascript" src="{% static 'manage/blueimp-file-upload/js/jquery.fileupload.js' %}"></script>
     <script type="text/javascript" src="{% static 'manage/jquery-knob/js/jquery.knob.js' %}"></script>
     <script type="text/javascript" src="{% static 'js/upload.js' %}"></script>
-    <script type="text/javascript" src="{% static 'registration/login.js' %}"></script>
+    <script type="text/javascript" src="{% static 'js/loading.js' %}"></script>
     <title>{% block title %}{% endblock %}</title>
 </head>
 <body>
 <nav class="nav_panel">
     {% with request.resolver_match.url_name as un %}
-        <div style="display: flex; flex-direction: row;margin-left: 20%; width: 60%;box-sizing: border-box;">
+        <div class="nav_main_item">
             <a href="{% url "index" %}" class="{% if un == 'index' %}nav_item_active{% else %}nav_item{% endif %}">Главная страница</a>
             <a href="{% url "decryptor_index" %}" class="{% if un == 'decryptor_index' %}nav_item_active{% else %}nav_item{% endif %}">Сканер бланков</a>
         </div>
