--- a/templates/registration/password_reset_form.html
+++ b/templates/registration/password_reset_form.html
@@ -8,11 +8,13 @@
     {% csrf_token %}
         <div class="container dir_row" style="width: 100%; justify-content: center;">
             <div class="container" style="width: 100%;">
-                <input placeholder="Введите Ваш email-адрес" class="inp inp_default" type="email" name="email" autocomplete="email" maxlength="254" required="" id="id_email">
+                <div class="inp_container">
+                    <input placeholder="Введите Ваш email-адрес" class="inp inp_default" type="email" name="email" autocomplete="email" maxlength="254" required="" id="id_email">
+                </div>
                 <button type="submit" class="bt bt_default" style="font-size: 19px;">Сбросить</button>
             </div>
         </div>
-    </form>\
+    </form>
     </div>
     </div>
 {% endblock %}
