--- a/templates/registration/register.html
+++ b/templates/registration/register.html
@@ -8,17 +8,18 @@
     {% csrf_token %}
         <div class="container dir_row" style="width: 100%; justify-content: center;">
             <div class="container" style="width: 100%;">
-                <input class="inp inp_default" placeholder="Логин..." type="text" name="username" maxlength="150" autofocus="" required="" id="id_username">
-                <input class="inp inp_default" placeholder="Email..." type="email" name="email" maxlength="254" id="id_email">
-                <input class="inp inp_default" placeholder="Имя" type="text" name="first_name" maxlength="150" id="id_first_name">
-                <input class="inp inp_default" placeholder="Фамилия..." type="text" name="last_name" maxlength="150" id="id_last_name">
-                <input class="inp inp_default" placeholder="Пароль..." type="password" name="password1" autocomplete="new-password" required="" id="id_password1">
-                <input class="inp inp_default" placeholder="Подтверждение пароля..." type="password" name="password2" autocomplete="new-password" required="" id="id_password2">
-                <button data-action="login_button" type="submit" class="bt bt_default" style="font-size: 19px; width: fit-content;">Регистрация</button>
+                <div class="inp_container">
+                    <input class="inp inp_default" placeholder="Логин..." type="text" name="username" maxlength="150" autofocus="" required="" id="id_username">
+                    <input class="inp inp_default" placeholder="Email..." type="email" name="email" maxlength="254" id="id_email">
+                    <input class="inp inp_default" placeholder="Имя" type="text" name="first_name" maxlength="150" id="id_first_name">
+                    <input class="inp inp_default" placeholder="Фамилия..." type="text" name="last_name" maxlength="150" id="id_last_name">
+                    <input class="inp inp_default" placeholder="Пароль..." type="password" name="password1" autocomplete="new-password" required="" id="id_password1">
+                    <input class="inp inp_default" placeholder="Подтверждение пароля..." type="password" name="password2" autocomplete="new-password" required="" id="id_password2">
+                </div>
+                <button data-action="login_button" type="submit" class="bt bt_default" style="font-size: 19px; width: fit-content; margin-right: 0; margin-left: 0;">Регистрация</button>
             </div>
         </div>
     </form>
-    <a href="{% url 'reset_password' %}">Forgot password</a>
     </div>
     </div>
 {% endblock %}
