--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -12,7 +12,7 @@
                         <input class="inp inp_default" placeholder="Логин..." type="text" name="username" autofocus="" autocapitalize="none" autocomplete="username" maxlength="150" required="" id="id_username">
                         <input class="inp inp_default" placeholder="Пароль..." type="password" name="password" autocomplete="current-password" required="" id="id_password">
                     </div>
-                    <button data-action="login_button" type="submit" class="bt bt_default" style="font-size: 19px; width: fit-content; margin-left: 0; margin-right: 0;">Войти</button>
+                    <button data-action="login_button" type="submit" class="bt bt_default_gradient" style="font-size: 19px; width: fit-content; margin-left: 0; margin-right: 0;">Войти</button>
                 </div>
             </div>
         </form>
