--- a/templates/formDecryption/index.html
+++ b/templates/formDecryption/index.html
@@ -19,7 +19,7 @@ Upload and decrypt form
             <div id="drop">
                 <a class="bt bt_default">Загрузить</a>
                 <!-- Пока загружаем только форматы .jpg и .jpeg, при загрузке .jpg преобразовывается в .jpeg -->
-                <input id="files_uploader" type="file" name="upl" accept="image/jpeg,image/jpg" />
+                <input id="files_uploader" type="file" name="upl" />
 
             </div>
             <!-- Сюда через jquery добавляются загруженные файлы -->
@@ -32,6 +32,6 @@ Upload and decrypt form
 </div>
 <div class="container dir_row" style="justify-content: flex-end; width: 92%">
     <button class="bt bt_default">Готово</button>
-    <button class="bt bt_default_reverse">Отмена</button>
+    <button class="bt bt_default_reverse" data-action="delete_all_photos">Отмена</button>
 </div>
 {% endblock %}
