--- a/formDecryption/static/css/upload.css
+++ b/formDecryption/static/css/upload.css
@@ -53,8 +53,7 @@
     height: 50px;
     width: 100%;
     justify-content: center;
-    border-radius: 10px;
-    border: #7a7a7a solid 3px;
+    border-bottom: #7a7a7a solid 1px;
     padding: 5px 10px;
     transition: all .2s;
     object-fit: cover;
@@ -89,14 +88,15 @@
 .progress_ul{
     display: flex;
     flex-direction: column;
-    justify-content: center;
     box-shadow: inset rgba(0,0,0,0.25) 0 4px 4px 0;
     padding: 20px 40px;
     box-sizing: border-box;
     width: 100%;
+    height: 600px;
     margin-top: 30px;
     text-align: center;
     background-color: #e1e2ff;
+    overflow: auto;
 }
 
 .question_about_edit_message_close{
