--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -4,10 +4,14 @@
     <div class="container dir_row" style="width: 100%; justify-content: center">
     <div class="container">
         <form data-action="login_form" method="POST" class="form">
+
         <div class="form_title">Вход</div>
         {% csrf_token %}
             <div class="container dir_row" style="width: 100%; justify-content: center;">
                 <div class="container" style="width: 100%;">
+                    {% for error in form.non_field_errors %}
+                        <span class="error warning_message">{{ error }}</span>
+                    {% endfor %}
                     <div class="inp_container">
                         <input class="inp inp_default" placeholder="Логин..." type="text" name="username" autofocus="" autocapitalize="none" autocomplete="username" maxlength="150" required="" id="id_username">
                         <input class="inp inp_default" placeholder="Пароль..." type="password" name="password" autocomplete="current-password" required="" id="id_password">
