--- a/templates/base.html
+++ b/templates/base.html
@@ -56,11 +56,12 @@
             <a href="{% url "index" %}" class="footer_item">Главная страница</a>
             <a href="{% url "contacts" %}" class="footer_item">Контакты</a>
             <a class="footer_item" href="https://github.com/Artemka007/FormDecryption">Проект на GitHub</a>
+            <a class="footer_item" href="https://docs.google.com/document/d/11gZ-GqUpfL4QKW7UxLPR68zDaDCGLPgG8h9TjmVC_BM/edit#">DOCS</a>
         </footer>
     </div>
 </div>
-<div class="container dir_row" style="position: absolute; justify-content: center; height: fit-content; width: 100%;">
-    <div class="warning_message_container error warning_message" style="width: 1000px;" data-action="modal_error_window">
+<div class="container dir_row" style="position: fixed; justify-content: center; height: fit-content; width: 100%;">
+    <div class="warning_message_container warning_message" style="width: 1000px;" data-action="modal_error_window">
         <div class="container dir_row" style="justify-content: center; width: 100%; justify-content: center">
             <div data-action="error_message" class="warning_message" style="background-color: rgba(0,0,0,0)">
 
