--- a/templates/content/about_project.html
+++ b/templates/content/about_project.html
@@ -6,7 +6,7 @@
     </div>
     <div class="container">
     <div class="text">
-        <p class="first_text">FormDecryptor - это удобная платформа для распознавания бланков олимпиад.</p>
+        <p class="first_text">FormDecryptor - это удобная платформа для распознавания ответов с бланков олимпиад.</p>
         <div class="container dir_row">
 
             <img style="width: 500px;" src="/media/manage/images/img(2).jpg" alt=""/>
