--- a/templates/base.html
+++ b/templates/base.html
@@ -16,8 +16,10 @@
     <script type="text/javascript" src="{% static 'manage/jquery.iframe-transport/jquery.iframe-transport.js' %}"></script>
     <script type="text/javascript" src="{% static 'manage/jquery.ui.widget/jquery.ui.widget.js' %}"></script>
     <script type="text/javascript" src="{% static 'manage/blueimp-file-upload/js/jquery.fileupload.js' %}"></script>
+    <script type="text/javascript" src="{% static 'manage/jquery-form/dist/jquery.form.min.js' %}"></script>
     <script type="text/javascript" src="{% static 'js/upload.js' %}"></script>
     <script type="text/javascript" src="{% static 'js/loading.js' %}"></script>
+    <script type="text/javascript" src="{% static 'js/auth.js' %}"></script>
     <title>{% block title %}{% endblock %}</title>
 </head>
 <body>
