--- a/templates/formDecryption/index.html
+++ b/templates/formDecryption/index.html
@@ -31,7 +31,7 @@ Upload and decrypt form
     </form>
 </div>
 <div class="container dir_row" style="justify-content: flex-end; width: 92%">
-    <button class="bt bt_default">Готово</button>
+    <button class="bt bt_default" data-action="send_photos">Готово</button>
     <button class="bt bt_default_reverse" data-action="delete_all_photos">Отмена</button>
 </div>
 {% endblock %}
